--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       --neon-2: #00b7ff;
       --ink: #dff9ff;
       --muted: #7ec9de;
+
       --menu-bg: rgba(13,18,28,0.95);
       --menu-item-bg: linear-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
       --menu-text: #001219;
@@ -28,17 +29,16 @@
 
     body {
       font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, Arial;
-      min-height: 100vh;
       color: var(--ink);
       background:
         radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.18), transparent 60%),
         radial-gradient(1000px 500px at 110% 120%, rgba(0,121,255,.20), transparent 60%),
         radial-gradient(800px 400px at -10% 120%, rgba(0,229,255,.12), transparent 60%),
         var(--bg);
-      padding: 32px 0; /* top+bottom padding, horizontal is 0 (content container handles width) */
+      /* no extra top/bottom padding here; container and sections control spacing */
     }
 
-    /* Sticky Hamburger */
+    /* Sticky hamburger */
     .menu-toggle {
       position: fixed;
       top: 24px;
@@ -98,13 +98,12 @@
     }
     .menu-item:hover {
       transform: translateY(-2px);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,.5) inset,
-        0 10px 26px rgba(0,183,255,.45),
-        0 0 80px rgba(0,229,255,.25);
+      box-shadow: 0 0 0 1px rgba(255,255,255,.5) inset,
+                  0 10px 26px rgba(0,183,255,.45),
+                  0 0 80px rgba(0,229,255,.25);
     }
 
-    /* Landing container — your original layout */
+    /* Landing container (original layout) */
     .container {
       width: min(760px, 92vw);
       margin: 0 auto;
@@ -141,6 +140,7 @@
       text-shadow: 0 0 20px rgba(0,229,255,.25);
       margin-top: 6px;
     }
+
     .tagline {
       text-align: center;
       margin: 6px 0 14px;
@@ -163,7 +163,7 @@
       color: #001219;
       text-decoration: none;
       font-weight: 700;
-      background: var(--menu-item-bg);
+      background: radial-gradient(200% 200% at 0% 0%, var(--neon) 0 30%, var(--neon-2) 60%, #0091ff 100%);
       box-shadow:
         0 0 0 1px rgba(0,229,255,.35) inset,
         0 8px 24px rgba(0,183,255,.35),
@@ -192,7 +192,7 @@
       opacity: .85;
     }
 
-    /* Scrollable sections */
+    /* Scrollable sections styles */
     .section {
       min-height: 100vh;
       padding: 100px 20px 80px;
@@ -228,7 +228,7 @@
     <span></span>
   </div>
 
-  <!-- Overlay menu -->
+  <!-- Menu overlay -->
   <div class="menu-overlay" id="menuOverlay">
     <div class="menu-list">
       <a href="#what-is-ai" class="menu-item">What is AI</a>
@@ -239,52 +239,52 @@
     </div>
   </div>
 
-  <!-- Landing content -->
+  <!-- Landing / hero -->
   <div class="container">
     <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
     <h1>NUT | M.R. Notenboom</h1>
     <p class="tagline">Exploring AI‑driven business solutions and sharing the journey</p>
     <div class="links">
       <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
-        <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0‑2‑2Zm0 4‑8 5L4 8V6l8 5 8‑5v2Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
         Email
       </a>
       <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5‑5V5a5 5 0 0 0‑5‑5Zm‑11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h‑3v‑5.6c0‑3.37‑4‑3.11‑4 0V19h‑3V8h3v1.8c1.4‑2.59 7‑2.78 7 2.48V19Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
         LinkedIn
       </a>
       <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79‑.26.79‑.58v‑2.24c‑3.34.73‑4.03‑1.42‑4.03‑1.42‑.55‑1.39‑1.33‑1.76‑1.33‑1.76‑1.09‑.75.08‑.73.08‑.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11‑.78.42‑1.31.76‑1.61‑2.67‑.3‑5.47‑1.33‑5.47‑5.93 0‑1.31.47‑2.38 1.24‑3.22‑.12‑.3‑.54‑1.52.12‑3.18 0 0 1.01‑.32 3.3 1.23.96‑.27 1.98‑.4 3‑.4s2.04.13 3 .4c2.29‑1.55 3.3‑1.23 3.3‑1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61‑2.81 5.63‑5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.30 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
         GitHub
       </a>
       <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M18.24 2.25h3.31l‑7.23 8.26 8.5 11.24H16.17l‑5.21‑6.82L4.99 21.75H1.68l7.73‑8.84L1.25 2.25H8.08l4.71 6.23zm‑1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
         Twitter
       </a>
     </div>
     <p class="footer">The AI era is here, welcome to the adventure ✨</p>
   </div>
 
-  <!-- Sections below -->
+  <!-- Scrollable sections -->
   <section class="section" id="what-is-ai">
     <h2>What is AI?</h2>
-    <p>Artificial Intelligence (AI) is the simulation of human intelligence by machines. It includes learning, reasoning, and self‑correction.</p>
+    <p>Artificial Intelligence (AI) refers to the simulation of human intelligence by machines, including learning, reasoning, and adaptation.</p>
   </section>
   <section class="section" id="impact-of-ai">
     <h2>Impact of AI</h2>
-    <p>AI is reshaping industries, improving efficiency, and transforming how we live and work.</p>
+    <p>AI touches industry, society, health, and everyday life. It speeds tasks, augments capacity, and raises ethical questions.</p>
   </section>
   <section class="section" id="future-of-ai">
     <h2>Future of AI</h2>
-    <p>The future promises more powerful systems, ethical dilemmas, and deeper integration into daily life.</p>
+    <p>Advances will bring more autonomy, integration, and challenges around control, trust, and responsibility.</p>
   </section>
   <section class="section" id="ai-applications">
     <h2>AI Applications</h2>
-    <p>From healthcare to finance, AI applications automate and enhance many domains of life.</p>
+    <p>From natural language processing to robotics, AI applications are broad across sectors: healthcare, finance, creativity, and more.</p>
   </section>
   <section class="section" id="how-to-use-ai">
     <h2>How to use AI</h2>
-    <p>Use tools like ChatGPT, experiment with models, learn basics of Python, and keep building.</p>
+    <p>Get started by using existing AI tools, learning fundamentals like prompt design, and building small experiments.</p>
   </section>
 
   <script>
@@ -298,7 +298,6 @@
         menuOverlay.classList.toggle('open');
       });
 
-      // Close menu if click outside the menu-list (on overlay background)
       menuOverlay.addEventListener('click', (e) => {
         if (e.target === menuOverlay) {
           menuToggle.classList.remove('open');
@@ -306,7 +305,6 @@
         }
       });
 
-      // Close menu when a menu link is clicked
       menuItems.forEach(item => {
         item.addEventListener('click', () => {
           menuToggle.classList.remove('open');
