--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       scroll-behavior: smooth;
     }
 
+    html, body {
+      width: 100%;
+      height: 100%;
+    }
+
     body {
       font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, Arial;
       color: var(--ink);
@@ -38,11 +43,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;  /* Center on initial load */
+      justify-content: center;
       min-height: 100vh;
     }
 
-    /* Sticky hamburger icon */
     .menu-toggle {
       position: fixed;
       top: 24px;
@@ -77,32 +81,36 @@
       inset: 0;
       background: var(--menu-bg);
       display: none;
-      justify-content: center;
-      align-items: center;
+      /* remove justify-items center; we want top-left stacking */
       z-index: 1000;
     }
     .menu-overlay.open {
-      display: flex;
+      display: block;
     }
 
+    /* Container for the menu items aligned top left */
     .menu-list {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 12px;
+      position: absolute;
+      top: 70px; /* a little below the toggle */
+      left: 24px;
     }
-
-    .menu-list .menu-item {
+    .menu-item {
       padding: 12px 24px;
       border-radius: 12px;
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 700;
       color: var(--menu-text);
       background: var(--menu-item-bg);
       text-align: center;
       text-decoration: none;
       transition: transform 0.2s, box-shadow 0.2s;
+      width: max-content;
+      white-space: nowrap;
     }
-    .menu-list .menu-item:hover {
+    .menu-item:hover {
       transform: translateY(-2px);
       box-shadow:
         0 0 0 1px rgba(255,255,255,.5) inset,
@@ -122,12 +130,11 @@
         0 30px 80px rgba(0,0,0,.6),
         0 0 120px rgba(0,229,255,.12);
       text-align: center;
-      /* Because we have body centering, this container will be centered vertically on load */
     }
 
     .hero-logo {
       width: min(320px, 70%);
-      aspect-ratio: 1/1;
+      aspect-ratio: 1 / 1;
       object-fit: contain;
       margin: 12px auto 8px;
       filter: drop-shadow(0 0 18px rgba(0,229,255,.45)) drop-shadow(0 0 40px rgba(0,183,255,.18));
@@ -145,7 +152,6 @@
       text-shadow: 0 0 20px rgba(0,229,255,.25);
       margin-top: 6px;
     }
-
     .tagline {
       text-align: center;
       margin: 6px 0 14px;
@@ -233,6 +239,7 @@
 
   <div class="menu-overlay" id="menuOverlay">
     <div class="menu-list">
+      <a href="#" class="menu-item" id="menu-home">Home</a>
       <a href="#what-is-ai" class="menu-item">What is AI</a>
       <a href="#impact-of-ai" class="menu-item">Impact of AI</a>
       <a href="#future-of-ai" class="menu-item">Future of AI</a>
@@ -241,25 +248,25 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" id="top">
     <img class="hero-logo" src="./images/NUT_N_LOGO_.png" alt="NUT digital logo">
     <h1>NUT | M.R. Notenboom</h1>
     <p class="tagline">Exploring AI‑driven business solutions and sharing the journey</p>
     <div class="links">
       <a href="mailto:info@mrnut.org" class="link-btn" aria-label="Email">
-        <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0‑2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2‑2V6a2 2 0 0 0‑2‑2Zm0 4‑8 5L4 8V6l8 5 8‑5v2Z"/></svg>
         Email
       </a>
       <a href="https://linkedin.com/in/riesnotenboom" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5-5V5a5 5 0 0 0-5-5Zm-11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h-3v-5.6c0-3.37-4-3.11-4 0V19h-3V8h3v1.8c1.4-2.59 7-2.78 7 2.48V19Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M19 0H5A5 5 0 0 0 0 5v14a5 5 0 0 0 5 5h14a5 5 0 0 0 5‑5V5a5 5 0 0 0‑5‑5Zm‑11 19H5V8h3v11ZM6.5 6.7A1.75 1.75 0 1 1 6.5 3.2a1.75 1.75 0 0 1 0 3.5ZM20 19h‑3v‑5.6c0‑3.37‑4‑3.11‑4 0V19h‑3V8h3v1.8c1.4‑2.59 7‑2.78 7 2.48V19Z"/></svg>
         LinkedIn
       </a>
       <a href="https://github.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79-.26.79-.58v-2.24c-3.34.73-4.03-1.42-4.03-1.42-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.38 1.24-3.22-.12-.3-.54-1.52.12-3.18 0 0 1.01-.32 3.30 1.23.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.29-1.55 3.3-1.23 3.3-1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61-2.81 5.63-5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.39.6.11.79‑.26.79‑.58v‑2.24c‑3.34.73‑4.03‑1.42‑4.03‑1.42‑.55‑1.39‑1.33‑1.76‑1.33‑1.76‑1.09‑.75.08‑.73.08‑.73 1.21.09 1.84 1.24 1.84 1.24 1.07 1.83 2.81 1.3 3.5.99.11‑.78.42‑1.31.76‑1.61‑2.67‑.3‑5.47‑1.33‑5.47‑5.93 0‑1.31.47‑2.38 1.24‑3.22‑.12‑.3‑.54‑1.52.12‑3.18 0 0 1.01‑.32 3.30 1.23.96‑.27 1.98‑.4 3‑.4s2.04.13 3 .4c2.29‑1.55 3.3‑1.23 3.3‑1.23.66 1.66.24 2.88.12 3.18.77.84 1.24 1.91 1.24 3.22 0 4.61‑2.81 5.63‑5.48 5.93.43.37.82 1.1.82 2.22v3.29c0 .32.19.69.8.58C20.56 21.8 24 17.3 24 12 24 5.37 18.63 0 12 0Z"/></svg>
         GitHub
       </a>
       <a href="https://twitter.com/Sincx79" class="link-btn" target="_blank" rel="noopener">
-        <svg viewBox="0 0 24 24"><path d="M18.24 2.25h3.31l-7.23 8.26 8.5 11.24H16.17l-5.21-6.82L4.99 21.75H1.68l7.73-8.84L1.25 2.25H8.08l4.71 6.23zm-1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
+        <svg viewBox="0 0 24 24"><path d="M18.24 2.25h3.31l‑7.23 8.26 8.5 11.24H16.17l‑5.21‑6.82L4.99 21.75H1.68l7.73‑8.84L1.25 2.25H8.08l4.71 6.23zm‑1.16 17.52h1.83L7.08 4.13H5.12z"/></svg>
         Twitter
       </a>
     </div>
@@ -272,19 +279,19 @@
   </section>
   <section class="section" id="impact-of-ai">
     <h2>Impact of AI</h2>
-    <p>AI is reshaping industries, improving efficiency, influencing society, and changing daily life.</p>
+    <p>AI transforms industries, society, workflows, ethics — its impact is broad and deep.</p>
   </section>
   <section class="section" id="future-of-ai">
     <h2>Future of AI</h2>
-    <p>The future brings advances, challenges, and deeper integration into our world.</p>
+    <p>The future holds autonomous systems, ethical challenges, and deeper integration into daily life.</p>
   </section>
   <section class="section" id="ai-applications">
     <h2>AI Applications</h2>
-    <p>From healthcare to entertainment, AI applications are vast and growing across fields.</p>
+    <p>From health to finance, art to agriculture — AI is applied everywhere.</p>
   </section>
   <section class="section" id="how-to-use-ai">
     <h2>How to use AI</h2>
-    <p>Start with tools, experiment with prompts, learn basics, and build your own mini-projects.</p>
+    <p>Start small: use existing tools, learn prompts, experiment, build step-by-step.</p>
   </section>
 
   <script>
@@ -292,6 +299,7 @@
       const menuToggle = document.getElementById('menuToggle');
       const menuOverlay = document.getElementById('menuOverlay');
       const menuItems = document.querySelectorAll('.menu-item');
+      const homeButton = document.getElementById('menu-home');
 
       menuToggle.addEventListener('click', () => {
         menuToggle.classList.toggle('open');
@@ -307,10 +315,14 @@
 
       menuItems.forEach(item => {
         item.addEventListener('click', (e) => {
-          // close the menu when clicked
+          // close menu
           menuToggle.classList.remove('open');
           menuOverlay.classList.remove('open');
-          // Let the browser scroll to the anchor target naturally
+          // if it's Home, scroll to top (the container top)
+          if (e.target === homeButton) {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+          }
+          // else the anchor’s default scroll will happen
         });
       });
     })();
